import  React from 'react';
import renderer from 'react-test-renderer'
import { ProductTitle, ProductCard } from '../../src/components';
import { product2 } from './data/products';



describe('Producttitle', ()=>{

    test('debe mostrar el componente correctamente con el titulo personalizado', ()=>{

        const wrapper = renderer.create(
            <ProductTitle title="Custom Product"/>
        )
        expect(wrapper.toJSON()).toMatchSnapshot();
        
    });
    test('Debe de mostrar el componente con el nombre del producto', ()=>{

        const wrapper = renderer.create(
            <ProductCard product= { product2 }>
               {
                   () => (
                       <ProductTitle />
                   )

               }
             
            </ProductCard>
        )
        expect(wrapper.toJSON()).toMatchSnapshot();

    })
})