// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Producttitle Debe de mostrar el componente con el nombre del producto 1`] = `
<div
  className="productCard undefined"
>
  <span
    className="productDescription undefined"
  >
    coffe Mug - Con imagen
  </span>
</div>
`;

exports[`Producttitle debe mostrar el componente correctamente con el titulo personalizado 1`] = `
<span
  className="productDescription undefined"
>
  Custom Product
</span>
`;
